# PlanarGS

./: .gitignore  README.md  pyproject.toml  run_lp3.py  train.py
geomprior/: align_opt.py  dataloader.py  regreader_utils.py
planar/: densify_points.py  training_report.py
planargs/arguments/: __init__.py
planargs/common_utils/: camera_utils.py
planargs/gaussian_renderer/: __init__.py  network_gui.py
planargs/geomprior/: align_opt.py  dataloader.py  regreader_utils.py
planargs/lp3/: box_migrate.py  color_cluster.py  mask_refine.py  run_groundedsam.py
planargs/planar/: co_planar.py  cull_mesh.py  training_report.py
planargs/scene/: __init__.py  cameras.py  dataset_readers.py  gaussian_model.py  ply_loader.py
scene/: dataset_readers.py  gaussian_model.py
submodules/simple-knn/: simple_knn.cu
